adding schema config for flyway, catalina opts default and removing unsued import